...
                                <rect key="frame" x="39.333333333333343" y="399.66666666666669" width="314.33333333333326" height="122.00000000000006"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bl3-zi-aUs">
                                        <rect key="frame" x="0.0" y="0.0" width="314.33333333333331" height="50"/>
                                        <constraints>
...
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" returnKeyType="next" textContentType="email"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KcK-U7-0PZ">
                                        <rect key="frame" x="0.0" y="72" width="314.33333333333331" height="50"/>
                                        <constraints>
...
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="Log In" cornerStyle="capsule">
                                            <fontDescription key="titleFontDescription" type="boldSystem" pointSize="24"/>
                                            <color key="baseBackgroundColor" red="0.57400663299999999" green="0.45441131309999999" blue="0.78039215689999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="Create Account" cornerStyle="capsule">
                                            <fontDescription key="titleFontDescription" type="boldSystem" pointSize="24"/>
                                            <color key="baseBackgroundColor" red="0.73092366107229922" green="0.58476577587944445" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
        <scene sceneID="11e-M6-0XU">
            <objects>
                <viewController storyboardIdentifier="InventoriesViewController" title="Inventory" id="UoS-hy-nhG" customClass="InventoriesViewController" customModule="BarcodeScanner" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="RPn-s2-3I4">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
...
                                <rect key="frame" x="12" y="668" width="88" height="35"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Reports"/>
                                <connections>
                                    <action selector="didTouchReportInventory:" destination="Z98-Hh-GJ2" eventType="touchUpInside" id="o3m-Oq-YTG"/>
...
        <scene sceneID="bdH-8E-CyS">
            <objects>
                <viewController storyboardIdentifier="CreateInventoryViewController" title="New Inventory" id="C5H-Bh-C44" customClass="CreateInventoryViewController" customModule="BarcodeScanner" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="pDp-RG-9Dk">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
...
                                </subviews>
                            </stackView>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G1M-4D-9lU">
                                <rect key="frame" x="16" y="230" width="353.66666666666669" height="50"/>
                                <constraints>
...
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="Create" cornerStyle="capsule">
                                            <fontDescription key="titleFontDescription" type="boldSystem" pointSize="24"/>
                                            <color key="baseBackgroundColor" red="0.57400663299999999" green="0.45441131309999999" blue="0.78039215689999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <fontDescription key="fontDescription" name="OpenSans-Semibold" family="Open Sans" pointSize="18"/>
                                <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                <state key="normal" title="Done">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
