...
class FirstScreenViewController: UIViewController {
    private var cancellables = Set<AnyCancellable>()
    @IBOutlet weak var scanBarcode: UIButton!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        let logOutBarButton = UIBarButtonItem(title: "Log out", style: .plain, target: self, action: #selector(didTouchLogOut))
        navigationItem.leftBarButtonItem = logOutBarButton
    }
    
    @IBAction func didTouchScanBarcode(_ sender: UIButton) {
        if let readerVC = BarcodeReaderViewController.getBarcodeReaderViewController() {
            readerVC.closeAfterFirstRead = true
...
